--- a/index.css
+++ b/index.css
@@ -173,3 +173,44 @@ dialog {
     font-size: 18px;
     cursor: pointer;
 }
+
+/* ===== MOBILE VERSION ===== */
+@media (max-width: 600px) {
+
+    body {
+        padding-top: 110px;
+    }
+
+    body::after {
+        font-size: 42px; /* logo plus petit */
+        letter-spacing: 4px;
+    }
+
+    #input {
+        width: 80%;
+        font-size: 14px;
+    }
+
+    #searchBtn {
+        width: 60%;
+        font-size: 14px;
+    }
+
+    #pokemon {
+        width: 85%;
+        padding: 18px;
+    }
+
+    #pokemon img {
+        width: 100px;
+    }
+
+    #pokemon p:first-child {
+        font-size: 16px;
+    }
+
+    dialog {
+        width: 85%;
+        font-size: 14px;
+    }
+}
